--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,10 @@
-baseurl         = "https://phil971.colinmclear.net/"
+baseurl         = "https://phil971-2020.colinmclear.net/"
 title           = "PHIL 971"
 theme           = "hugo-bootstrap-premium"
 paginate        = 10
 copyright       = "Colin McLear"
 DisqusShortname = ""
 enableRobotsTXT = true
-googleAnalytics = "UA-30497236-1"
 
 [permalinks]
   post = "/:section/:year/:month/:title/"
